--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Atrações</h1>
-    <p>Vila dos Animais</p>
+    <h1 class="relative">Atrações</h1>
+    <p class="absolute">Vila dos Animais</p>
     <img src="assets/images/Projeto1.jpg" alt="Profile pic">
 </body>
 </html>
