--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <h1>Atrações</h1>
-    <p>Vila dos Animais</p>
-    <img src="assets/images/Projeto1.jpg" alt="Profile pic">
+    
+    <div class="wrapper">
+        <img src="assets/images/Projeto1.jpg" alt="">
+        <div class="text-box">
+            <h2>Vila dos Animais</h2>
+            <p> Aberto sempre pelas manhas e tardes</p>
+        </div>
+    </div>
 </body>
 </html>
