--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
             <p> Aberto sempre pelas manhas e tardes</p>
         </div>
     </div>
+
+    <div class="wrapper">
+        <img src="assets/images/Projeto1.jpg" alt="">
+        <div class="text-box">
+            <h2>Vila dos Animais</h2>
+            <p> Aberto sempre pelas manhas e tardes</p>
+        </div>
+    </div>
 </body>
 </html>
