--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Atrações</h1>
     
     <div class="wrapper">
-        <img src="assets/images/Projeto1.jpg" alt="">
+        <img src="assets/images/Projeto1.jpg">
         <div class="text-box">
             <h2>Vila dos Animais</h2>
             <p> Aberto sempre pelas manhas e tardes</p>
@@ -19,7 +19,7 @@
     </div>
 
     <div class="wrapper">
-        <img src="assets/images/Projeto1.jpg" alt="">
+        <img src="assets/images/Projeto1.jpg">
         <div class="text-box">
             <h2>Vila dos Animais</h2>
             <p> Aberto sempre pelas manhas e tardes</p>
