--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 </head>
 <body>
     <h1>Atrações</h1>
-    
-    <div class="wrapper">
-        <img src="assets/images/Projeto1.jpg">
-        <div class="text-box">
-            <h2>Vila dos Animais</h2>
-            <p> Aberto sempre pelas manhas e tardes</p>
-        </div>
-    </div>
-
-    <div class="wrapper">
-        <img src="assets/images/Projeto1.jpg">
-        <div class="text-box">
-            <h2>Vila dos Animais</h2>
-            <p> Aberto sempre pelas manhas e tardes</p>
+    <div class="size">
+        <div class="size-limits">
+            <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
+            <div class="text-box">
+                <h2>Vila dos Animais</h2>
+                <p> Aberto sempre pelas manhas e tardes
+                <br><br><br><br><br><br><br><br><br><br><br>
+                </p>
+            </div>
+        
+            <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
+            <div class="text-box">
+                <h2>Vila dos Animais</h2>
+                <p> Aberto sempre pelas manhas e tardes</p>
+            </div>
         </div>
     </div>
 </body>
