--- a/index.html
+++ b/index.html
@@ -14,15 +14,36 @@
             <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
             <div class="text-box">
                 <h2>Vila dos Animais</h2>
-                <p> Aberto sempre pelas manhas e tardes
-                <br><br><br><br><br><br><br><br><br><br><br>
-                </p>
+                <p> Aberto sempre pelas manhas e tardes</p>
+                <br><br><br><br><br><br><br><br><br><br>
             </div>
         
             <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
             <div class="text-box">
-                <h2>Vila dos Animais</h2>
+                <h2>Morro da Cruz</h2>
                 <p> Aberto sempre pelas manhas e tardes</p>
+                <br><br><br><br><br><br><br><br><br><br>
+            </div>
+
+            <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
+            <div class="text-box">
+                <h2>Castello Reale</h2>
+                <p> Aberto sempre pelas manhas e tardes</p>
+                <br><br><br><br><br><br><br><br><br><br>
+            </div>
+
+            <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
+            <div class="text-box">
+                <h2>Casa do Colono</h2>
+                <p> Aberto sempre pelas manhas e tardes</p>
+                <br><br><br><br><br><br><br><br><br><br>
+            </div>
+
+            <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
+            <div class="text-box">
+                <h2>Gruta do Bacaetava</h2>
+                <p> Aberto sempre pelas manhas e tardes</p>
+                <br><br><br><br><br><br><br><br><br><br>
             </div>
         </div>
     </div>
