--- a/index.html
+++ b/index.html
@@ -8,42 +8,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Atrações</h1>
+    <style>
+        body {
+          background-image: url(assets/images/Background.jpg);
+        }
+        </style>
+    <h1>Horários e Endereço das Atrações</h1>
     <div class="size">
         <div class="size-limits">
-            <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
+            <img src="assets/images/VilaDosAnimais.jpg" alt="" class="img-responsive floating-image right">
             <div class="text-box">
                 <h2>Vila dos Animais</h2>
-                <p> Aberto sempre pelas manhas e tardes</p>
-                <br><br><br><br><br><br><br><br><br><br>
+                <p> Aberto Sábado e Domingo, das 10:00 - 17:00.<br><br>
+                    R. Cantidio da Silva, 700 - Cacaegüera, Campina Grande do Sul - PR, 83430-000</p>
+                <br><br><br><br><br><br><br>
             </div>
         
-            <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
+            <img src="assets/images/MorroDaCruz.jpg" alt="" class="img-responsive floating-image right">
             <div class="text-box">
                 <h2>Morro da Cruz</h2>
-                <p> Aberto sempre pelas manhas e tardes</p>
-                <br><br><br><br><br><br><br><br><br><br>
+                <p> Aberto sempre.<br><br>Rod. Antonio Gasparin - Fervida, Colombo - PR</p>
+                <br><br><br><br><br><br>
             </div>
 
-            <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
+            <img src="assets/images/Castello Reale.jpg" alt="" class="img-responsive floating-image right">
             <div class="text-box">
                 <h2>Castello Reale</h2>
-                <p> Aberto sempre pelas manhas e tardes</p>
-                <br><br><br><br><br><br><br><br><br><br>
+                <p> Aberto de Terça a Sábado, das 9:00 - 12:00 / 13:00 - 17:00.<br><br>
+                    R. José Strapasson, 888 - Santa Gema, Colombo - PR, 83407-200</p>
+                <br><br><br><br><br><br>
             </div>
 
-            <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
+            <img src="assets/images/ParoquiaSantoAntonio.jpg" alt="" class="img-responsive floating-image right">
             <div class="text-box">
-                <h2>Casa do Colono</h2>
-                <p> Aberto sempre pelas manhas e tardes</p>
-                <br><br><br><br><br><br><br><br><br><br>
+                <h2>Paróquia Santo Antônio</h2>
+                <p> Aberto sempre pelas manhas e tardes<br><br>
+                    Estr. Da Ribeira, 927 - Bocaiúva do Sul - 83450-000</p>
+                <br><br><br><br><br><br>
             </div>
 
-            <img src="assets/images/Projeto1.jpg" alt="" class="img-responsive floating-image right">
+            <img src="assets/images/GrutaDeBacaetava.jpg" alt="" class="img-responsive floating-image right">
             <div class="text-box">
                 <h2>Gruta do Bacaetava</h2>
-                <p> Aberto sempre pelas manhas e tardes</p>
-                <br><br><br><br><br><br><br><br><br><br>
+                <p> Aberto Sexta e Sábado das 9:00 - 11:00 / 13:00 - 16:00,<br> Aberto Domingo das 9:00 - 11:30 / 12:00 - 16:00<br><br>
+                    Rod. Antonio Gasparin, 120 - Bacaetava, Colombo - PR, 81050-210</p>
+                <br><br><br><br><br><br>
             </div>
         </div>
     </div>
